rnsc/test_data/rns_integration/error/parser/type_hints/float/trailing_token_recovers.rns
.class @float 3.14 unexpected_second_operand ; <- this error shouldn't block next error
.super java/lang/Object
unknown_token ; <- this error should be reported as well
